<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ooioo</groupId>
	<artifactId>ruches</artifactId>
	<version>6.0.0</version>
	<packaging>war</packaging>
	<properties>
		<closure-compiler.version>2.31.0</closure-compiler.version>
		<ortools.version>9.11.4210</ortools.version>
		<java.version>22</java.version>
		<ruches.js.version>54</ruches.js.version>
	</properties>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
	</parent>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.ortools</groupId>
			<artifactId>ortools-java</artifactId>
			<version>${ortools.version}</version>
			<!-- Exclusions des plateformes non linux x64 pour diminuer la
			taille du war -->
			<!--
			https://mvnrepository.com/artifact/com.google.ortools/ortools-java/9.7.2996 -->
			<exclusions>
				<exclusion>
					<groupId>com.google.ortools</groupId>
					<artifactId>ortools-win32-x86-64</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.ortools</groupId>
					<artifactId>ortools-darwin-x86-64</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.ortools</groupId>
					<artifactId>ortools-darwin-aarch64</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.ortools</groupId>
					<artifactId>ortools-linux-aarch64</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>
	</dependencies>
	<build>
		<finalName>ruches</finalName>
		<plugins>

			<!-- 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<warSourceExcludes>
			${basedir}/src/main/resources/static/js/ruches-${ruches.js.version}/*.js</warSourceExcludes>
				</configuration>
			</plugin>
			-->
			<plugin>
				<groupId>com.github.blutorange</groupId>
				<artifactId>closure-compiler-maven-plugin</artifactId>
				<version>${closure-compiler.version}</version>
				<executions>
					<execution>
						<id>default-minify</id>
						<configuration>
							<closureLanguageOut>NO_TRANSPILE</closureLanguageOut>
							<!--
							https://blutorange.github.io/closure-compiler-maven-plugin/examples/m2e.html -->
							<skipRunOnIncremental>true</skipRunOnIncremental>
							<baseSourceDir>
								${basedir}/src/main/resources/static/js</baseSourceDir>
							<sourceDir>ruches-${ruches.js.version}</sourceDir>
							<baseTargetDir>
								${project.build.directory}/${project.build.finalName}/WEB-INF/classes/static/js
							</baseTargetDir>
							<targetDir>ruches-${ruches.js.version}</targetDir>
							<skipMerge>true</skipMerge>
							<outputFilename>#{filename}</outputFilename>
							<includes>
								<include>*.js</include>
							</includes>
							<excludes>
								<exclude>eslint.config.js</exclude>
							</excludes>
						</configuration>
						<goals>
							<goal>minify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Pour exclure un éventuel fichier local context.xml-->
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<packagingExcludes>META-INF/context.xml</packagingExcludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!-- https://www.vojtechruzicka.com/spring-boot-version/ -->
				<executions>
					<execution>
						<id>build-info</id>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
